--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - 403 Forbidden</title>
+  <!-- MENGGUNAKAN CSS INTERNAL -->
   <style>
     @import url("https://fonts.googleapis.com/css?family=Lato");
     * {
