--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - 403 Forbidden</title>
+  <title>403 Forbidden</title>
   <!-- MENGGUNAKAN CSS INTERNAL -->
   <style>
     @import url("https://fonts.googleapis.com/css?family=Lato");
